@@ -1087,7 +1087,11 @@ struct TxnCursorFixture {
 
   void approxMatchTest() {
     ham_db_t *db;
-    REQUIRE(0 == ham_env_create_db(m_env, &db, 33, 0, 0));
+    ham_parameter_t params[] = {
+      {HAM_PARAM_KEY_TYPE, HAM_TYPE_UINT64},
+      {0, 0}
+    };
+    REQUIRE(0 == ham_env_create_db(m_env, &db, 33, 0, &params[0]));
 
     char data[1024 * 64] = {0};
     for (int i = 0; i < 40; i++) {
@@ -1100,12 +1104,23 @@ struct TxnCursorFixture {
     ham_cursor_t *cursor;
     REQUIRE(0 == ham_cursor_create(&cursor, db, 0, 0));
 
-    uint64_t k = 0;
-    ham_key_t key = ham_make_key(&k, sizeof(k));
-    ham_record_t record = {0};
-    REQUIRE(0 == ham_cursor_find(cursor, &key, &record, HAM_FIND_GEQ_MATCH));
-    REQUIRE(key.size == 8);
-    REQUIRE(*(uint64_t *)key.data == 10);
+    {
+      uint64_t k = 0;
+      ham_key_t key = ham_make_key(&k, sizeof(k));
+      ham_record_t record = {0};
+      REQUIRE(0 == ham_db_find(db, 0, &key, &record, HAM_FIND_GEQ_MATCH));
+      REQUIRE(key.size == 8);
+      REQUIRE(*(uint64_t *)key.data == 10);
+    }
+
+    {
+      uint64_t k = 0;
+      ham_key_t key = ham_make_key(&k, sizeof(k));
+      ham_record_t record = {0};
+      REQUIRE(0 == ham_cursor_find(cursor, &key, &record, HAM_FIND_GEQ_MATCH));
+      REQUIRE(key.size == 8);
+      REQUIRE(*(uint64_t *)key.data == 10);
+    }
 
     REQUIRE(0 == ham_db_close(db, HAM_AUTO_CLEANUP));
   }
@@ -1311,8 +1326,8 @@ TEST_CASE("TxnCursor/overwriteRecordsNilCursorTest", "")
 
 TEST_CASE("TxnCursor/approxMatchTest", "")
 {
-  //TxnCursorFixture f;
-  //f.approxMatchTest(); TODO currently failing
+  TxnCursorFixture f;
+  f.approxMatchTest();
 }
 
 } // namespace hamsterdb
