@@ -1,3 +1,7 @@
+Nov 27, 2014 - chris ---------------------------------------------------
+o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
+	transactions
+
 Nov 21, 2014 - chris ---------------------------------------------------
 o Fixed compilation error on OSX (thanks, Daniel Lemire)
 
